@@ -3,6 +3,7 @@ use Mojo::Base 'Mojolicious::Plugin';
 use Mojo::Base -strict;
 use Mojo::Util qw!quote trim!;
 use List::Util qw'uniq';
+use Mojo::ByteStream 'b';
 
 sub register {
   my ($plugin, $app, $param) = @_;
@@ -14,10 +15,28 @@ sub register {
     $param = { %$param, %$config_param };
   };
 
+  my $with_nonce = delete $param->{-with_nonce};
+
+  $app->plugin('Util::RandomString' => {
+    nonce => {
+      alphabet => '1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#?(){}<>+-*',
+      length   => 20
+    }
+  });
+
+  unless ($app->renderer->helpers->{'content_block'}) {
+    $app->plugin('TagHelpers::ContentBlock');
+  };
+
   # Initialize directives
   my %directives = ();
   foreach (keys %$param) {
     $directives{$_} = ref $param->{$_} eq 'ARRAY' ? $param->{$_} : [$param->{$_}];
+  };
+
+  # Add nonce rule for JS
+  if ($with_nonce) {
+    push(@{$directives{'script-src'} //= []}, 'nonce-{{nonce_js}}');
   };
 
   # Generate csp based on directives
@@ -28,7 +47,12 @@ sub register {
     before_dispatch => sub {
       my $c = shift;
       if ($$csp) {
-        $c->res->headers->header('Content-Security-Policy' => $$csp);
+        my $line = $$csp;
+        if ($with_nonce) {
+          $c->stash('csp.nonce' => my $nonce = $c->random_string('nonce'));
+          $line =~ s/\'nonce-\{\{nonce_js\}\}\'/\'nonce-$nonce\'/;
+        };
+        $c->res->headers->header('Content-Security-Policy' => $line);
       };
     }
   );
@@ -48,9 +72,24 @@ sub register {
 
       # Probably called from app
 
+      # Check for compliance!
+
       # Add to static directives
       push(@{$directives{$dir} //= []}, $url);
       $csp = \(generate(%directives));
+    }
+  );
+
+  $app->helper(
+    csp_nonce_tag => sub {
+      my $c = shift;
+      if ($with_nonce) {
+        return b(
+          '<script nonce="' . $c->stash('csp.nonce') .
+            '">//<![CDATA[' . $c->content_block('nonce_js') .
+            "\n//]]></script>");
+      }
+      return b('<!-- inline js permitted -->');
     }
   );
 };
